--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'org.jsoup:jsoup:1.10.1'
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile files('libs/photoview.jar')
 }
 repositories {
     mavenCentral()
